[package]
name = "xl"
version = "0.2.0"
edition = "2018"
license = "MIT"
description = "A package to let you process *big* Excel files very quickly"
repository = "https://github.com/xlprotips/xl/"

[dependencies]
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }
quick-xml = "0.22.0"
chrono = "0.4"

[lib]
name = "xl"
path = "src/lib.rs"

[[bin]]
name = "xlcat"
path = "src/main.rs"
